--- a/MLcourse/final-group-project.html
+++ b/MLcourse/final-group-project.html
@@ -26,7 +26,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2017-03-14">
+<meta name="date" content="2017-03-15">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -329,8 +329,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul>
 <p>You are free to use another dataset for which you believe there are interesting questions to answer. Or you can choose a dataset from the following data repositories:</p>
 <ul>
-<li><a href="www.data.gov.fr">Open Gov. Data</a>.</li>
-<li><a href="www.kaggle.com">Kaggle</a>.</li>
+<li><a href="https://www.data.gov/">Open Gov. Data</a>.</li>
+<li><a href="http://www.kaggle.com">Kaggle</a>.</li>
 <li><a href="http://www.kdnuggets.com/datasets/">KDD Nuggets</a>.</li>
 <li><a href="http://archive.ics.uci.edu/ml/">UCI Machine Learning Repository</a>.</li>
 </ul>
