--- a/teaching/index.html
+++ b/teaching/index.html
@@ -243,7 +243,7 @@
         <ul>
           <li>Discrete Random Variables: <a target="_blank" href="../documents/proba-spring-16-17-1.pdf">1 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, <a target="_blank" href="../documents/proba-spring-16-17-2.pdf">2 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
           <li>Continuous Random Variables: <a target="_blank" href="../documents/proba-spring-16-17-3.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
-          <li>Slides on Coninuous Random Variables: <a target="_blank" href="../documents/slides-lois-continues-.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&lt;/a-&gt;.</a></li>
+          <li>Slides on Coninuous Random Variables: <a target="_blank" href="../documents/slides-lois-continues-16-17.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
           <li>Exercices: <a target="_blank" href="../documents/proba-spring-16-17-td1.pdf">1 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, <a target="_blank" href="../documents/proba-spring-16-17-td2.pdf">2 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
         </ul>
       </li>
