--- a/research/index.html
+++ b/research/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## Projects Here is a list of projects in which I participated. ### Sodatech Creation of [Sodata](https://objetsconnectes.wp.imt.fr/): a Big Data Plateform to collect and visualize data from social networks such as Facebook, Twitter &amp; Instagram. Partners: [1000Mercis](https://www.1000mercis.com/#!/), [ENS Cachan](http://www.ens-cachan.fr/). * ***Missions***: + Construct graphs from crawled social networks data (Facebook,...">
+  <meta property="og:description" content="* Do not remove this line (it will not be displayed) {:toc} ## Projects Here is a list of projects in which I participated. ### Sodatech Creation of [Sodata](https://objetsconnectes.wp.imt.fr/): a Big Data Plateform to collect and visualize data from social networks such as Facebook, Twitter &amp; Instagram. Partners: [1000Mercis](https://www.1000mercis.com/#!/), [ENS...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## Projects Here is a list of projects in which I participated. ### Sodatech Creation of [Sodata](https://objetsconnectes.wp.imt.fr/): a Big Data Plateform to collect and visualize data from social networks such as Facebook, Twitter &amp; Instagram. Partners: [1000Mercis](https://www.1000mercis.com/#!/), [ENS Cachan](http://www.ens-cachan.fr/). * ***Missions***: + Construct graphs from crawled social networks data (Facebook,...">
+  <meta name="twitter:description" content="* Do not remove this line (it will not be displayed) {:toc} ## Projects Here is a list of projects in which I participated. ### Sodatech Creation of [Sodata](https://objetsconnectes.wp.imt.fr/): a Big Data Plateform to collect and visualize data from social networks such as Facebook, Twitter &amp; Instagram. Partners: [1000Mercis](https://www.1000mercis.com/#!/), [ENS...">
   
 
   
@@ -223,7 +223,19 @@
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <h2 id="projects">Projects</h2>
+      <ul id="markdown-toc">
+  <li><a href="#projects" id="markdown-toc-projects">Projects</a>    <ul>
+      <li><a href="#sodatech" id="markdown-toc-sodatech">Sodatech</a></li>
+      <li><a href="#curated-media" id="markdown-toc-curated-media">Curated Media</a></li>
+      <li><a href="#open-food-system" id="markdown-toc-open-food-system">Open Food System</a></li>
+      <li><a href="#angel" id="markdown-toc-angel">Angel</a></li>
+      <li><a href="#coclico" id="markdown-toc-coclico">Coclico</a></li>
+    </ul>
+  </li>
+  <li><a href="#my-phd" id="markdown-toc-my-phd">My PhD</a></li>
+</ul>
+
+<h2 id="projects">Projects</h2>
 
 <p>Here is a list of projects in which I participated.</p>
 
@@ -297,7 +309,7 @@ qui regroupe vingt partenaires industriels et laboratoires de recherche. -->
   </li>
 </ul>
 
-<h3 id="angel">ANGEL</h3>
+<h3 id="angel">Angel</h3>
 
 <p>Project funded by the french ministry for the economy and finance. The project aims to develop a system for Optimized and Intelligent Machining operations.</p>
 
@@ -331,7 +343,7 @@ système logiciel pour l’Industrialisation Optimisée Intelligente de l’Usin
   </li>
 </ul>
 
-<h3 id="coclico">COCLICO</h3>
+<h3 id="coclico">Coclico</h3>
 
 <p>Coclico est un projet de recherche ANR visant à étudier et proposer une méthode générique
 innovante permettant une analyse multi-échelle de grands volumes de données spatio-temporelles
