--- a/teaching/index.html
+++ b/teaching/index.html
@@ -269,9 +269,9 @@
   </li>
 </ul>
 
-<h2 id="universit-paris-13">Université Paris 13</h2>
+<h2 id="université-paris-13">Université Paris 13</h2>
 
-<h3 id="section">2010–2014</h3>
+<h3 id="20102014">2010–2014</h3>
 
 <ul>
   <li>Data mining, Master 1.</li>
@@ -282,9 +282,9 @@
   <li>Preparation to C2I (french internet and computer sciences certificate).</li>
 </ul>
 
-<h2 id="universit-joseph-fourier">Université Joseph Fourier</h2>
+<h2 id="université-joseph-fourier">Université Joseph Fourier</h2>
 
-<h3 id="section-1">2009–2010</h3>
+<h3 id="20092010">2009–2010</h3>
 
 <ul>
   <li>Algebra.</li>
@@ -292,13 +292,13 @@
 
 <h2 id="association-science-ouverte">Association Science Ouverte</h2>
 
-<h3 id="section-2">2011–2012</h3>
+<h3 id="20112012">2011–2012</h3>
 
 <p>As a volunteer to help high school students in math and physics.</p>
 
 <h2 id="al-mujtaba-high-school-beirut">Al-Mujtaba High School, Beirut</h2>
 
-<h3 id="section-3">2008–2009</h3>
+<h3 id="20082009">2008–2009</h3>
 
 <p>Math teacher, Grades 8 &amp; 9.</p>
 
