--- a/bibliography/mybiblio/index.html
+++ b/bibliography/mybiblio/index.html
@@ -64,7 +64,7 @@
   
 
   
-  <meta property="og:image" content="http://mghassany.com/img/mypic.png" />
+  <meta property="og:image" content="http://mghassany.com/img/Ghassany Mohamad _2017_web.jpg" />
   
   
 
@@ -82,7 +82,7 @@
   
 
   
-  <meta name="twitter:image" content="http://mghassany.com/img/mypic.png" />
+  <meta name="twitter:image" content="http://mghassany.com/img/Ghassany Mohamad _2017_web.jpg" />
   
 
 </head>
@@ -183,7 +183,7 @@
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="http://mghassany.com ">
-	      <img class="avatar-img" src="/img/mypic.png" />
+	      <img class="avatar-img" src="/img/Ghassany Mohamad _2017_web.jpg" />
 		</a>
 	  </div>
 	</div>
@@ -220,9 +220,9 @@
 
 <p>Ghassany, M. (2010). The adaptive fused lasso regression and its application on microarrays CGH data.</p>
 
-<p>Benamar, L., Balagué, C., &amp; Ghassany, M. (2016). The Identification and Influence of Social Roles in a Social Media Product Community : a Systemic Approach. <i>(Submitted)</i>.</p>
-
 <p>Benamar, L., Ghassany, M., &amp; Balagué, C. (2016). Analyzing interactions and identifying social roles in a brand community on social networks. In <i>The European Marketing Academy, EMAC2016.</i></p>
+
+<p>Benamar, L., Balagué, C., &amp; Ghassany, M. (2017). The Identification and Influence of Social Roles in a Social Media Product Community. <i>Journal of Computer‐Mediated Communication</i>. https://doi.org/10.1111/jcc4.12195</p>
 
 	    
     </div>
