--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@
   
 
   
-  <meta property="og:image" content="http://mghassany.com/img/mypic.png" />
+  <meta property="og:image" content="http://mghassany.com/img/Ghassany Mohamad _2017_web.jpg" />
   
   
 
@@ -96,7 +96,7 @@
   
 
   
-  <meta name="twitter:image" content="http://mghassany.com/img/mypic.png" />
+  <meta name="twitter:image" content="http://mghassany.com/img/Ghassany Mohamad _2017_web.jpg" />
   
 
 </head>
@@ -197,7 +197,7 @@
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="http://mghassany.com ">
-	      <img class="avatar-img" src="/img/mypic.png" />
+	      <img class="avatar-img" src="/img/Ghassany Mohamad _2017_web.jpg" />
 		</a>
 	  </div>
 	</div>
