--- a/publications/index.html
+++ b/publications/index.html
@@ -41,6 +41,10 @@
   
 
   
+    
+      <link rel="stylesheet" href="/css/academicons.css" />
+    
+  
 
   
 
@@ -52,7 +56,10 @@
   
 
    
-  <meta property="og:description" content="My [Google Scholar](https://scholar.google.com/citations?user=rqfVsosAAAAJ) page.
+  <meta property="og:description" content="
+
+My academic profiles   
+
 
 ## Journal articles
 
@@ -94,7 +101,10 @@
   
 
   
-  <meta name="twitter:description" content="My [Google Scholar](https://scholar.google.com/citations?user=rqfVsosAAAAJ) page.
+  <meta name="twitter:description" content="
+
+My academic profiles   
+
 
 ## Journal articles
 
@@ -255,7 +265,11 @@
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <p>My <a href="https://scholar.google.com/citations?user=rqfVsosAAAAJ">Google Scholar</a> page.</p>
+      <!-- My [Google Scholar](https://scholar.google.com/citations?user=rqfVsosAAAAJ) page.
+ -->
+<div style="text-align: right">
+<h4 id="academic">My academic profiles</h4> <a target="_blank" href="https://scholar.google.com/citations?user=rqfVsosAAAAJ"><span class="ai ai-google-scholar ai-lg" style="color:#00B4A1" aria-hidden="true"></span></a> <a target="_blank" href="https://www.researchgate.net/profile/Mohamad_Ghassany"><span class="ai ai-researchgate ai-lg" style="color:#00B4A1" aria-hidden="true"></span></a> <a target="_blank" href="http://dblp.uni-trier.de/pers/hd/g/Ghassany:Mohamad"><span class="ai ai-dblp ai-lg" style="color:#00B4A1" aria-hidden="true"></span></a>
+</div>
 
 <h2 id="journal-articles">Journal articles</h2>
 
