--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@ css: "/css/aboutme.css"
 <h1 id="bio">Brief Bio</h1>
 
 <p class="about-text">
+<span class="fa fa-user about-icon" style="color:#00B4A1"></span>
+I am currently an associate professor at <a href="http://www.devinci.fr/en/"> Leonardo da Vinci Engineering School</a> in Paris La D&eacute;fense. I work principally on Machine Learning research subjects. I teach Machine Learning, Probability and Statistics.</p>
+
+<p class="about-text">
 <span class="fa fa-briefcase about-icon" style="color:#00B4A1"></span>
-I am currently a research engineer in Computer Science at <a href="http://www.telecom-em.eu/">Télécom Management School</a> in Paris. I am also assistant professor at <a href="http://www.esilv.fr/">Leonard de Vinci Engineering School</a> where I teach Machine Learning, Probability and Statistics.<br>Previously, I was a post-doctoral researcher at <a href="http://www.lurpa.ens-cachan.fr/">LURPA</a>, <a href="http://www.ens-cachan.fr/">Ecole Normale Supérieure de Cachan</a>. 
-</p>
+Previously, I worked as a research engineer and a data scientist at <a href="http://www.telecom-em.eu/en">Telecom Business School</a> in Paris. I was also a post-doctoral researcher at <a href="http://www.ens-cachan.fr/en">Ecole Normale Supérieure Paris-Saclay</a>.</p>
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon" style="color:#00B4A1"></span>
