--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 <p class="about-text">
 <span class="fa fa-user about-icon" style="color:#00B4A1"></span>
-Test I am currently an associate professor at <a href="http://www.devinci.fr/en/"> Leonardo da Vinci Engineering School</a> in Paris La D&eacute;fense. I work principally on Machine Learning research subjects. I teach Machine Learning, Probability and Statistics.</p>
+I am currently an associate professor at <a href="http://www.devinci.fr/en/"> Leonardo da Vinci Engineering School</a> in Paris La D&eacute;fense. I work principally on Machine Learning research subjects. I teach Machine Learning, Probability and Statistics.</p>
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon" style="color:#00B4A1"></span>
