--- a/bibliography/mybiblio/index.html
+++ b/bibliography/mybiblio/index.html
@@ -222,7 +222,7 @@
 
 <p>Benamar, L., Ghassany, M., &amp; Balagué, C. (2016). Analyzing interactions and identifying social roles in a brand community on social networks. In <i>The European Marketing Academy, EMAC2016.</i></p>
 
-<p>Benamar, L., Balagué, C., &amp; Ghassany, M. (2017). The Identification and Influence of Social Roles in a Social Media Product Community. <i>Journal of Computer‐Mediated Communication</i>. http://doi.org/10.1111/jcc4.12195</p>
+<p>Benamar, L., Balagué, C., &amp; Ghassany, M. (2017). The Identification and Influence of Social Roles in a Social Media Product Community. <i>Journal of Computer‐Mediated Communication</i>. https://doi.org/10.1111/jcc4.12195</p>
 
 	    
     </div>
