--- a/research/index.html
+++ b/research/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="* Do not remove this line (it will not be displayed) {:toc} ## Projects Here is a list of projects in which I participated. ### Sodatech Creation of [Sodata](https://objetsconnectes.wp.imt.fr/): a Big Data Plateform to collect and visualize data from social networks such as Facebook, Twitter &amp; Instagram. Partners: [1000Mercis](https://www.1000mercis.com/#!/), [ENS...">
+  <meta property="og:description" content="## Table of contents * Do not remove this line (it will not be displayed) {:toc} ## Projects Here is a list of projects in which I participated. ### Sodatech Creation of [Sodata](https://objetsconnectes.wp.imt.fr/): a Big Data Plateform to collect and visualize data from social networks such as Facebook, Twitter &amp;...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="* Do not remove this line (it will not be displayed) {:toc} ## Projects Here is a list of projects in which I participated. ### Sodatech Creation of [Sodata](https://objetsconnectes.wp.imt.fr/): a Big Data Plateform to collect and visualize data from social networks such as Facebook, Twitter &amp; Instagram. Partners: [1000Mercis](https://www.1000mercis.com/#!/), [ENS...">
+  <meta name="twitter:description" content="## Table of contents * Do not remove this line (it will not be displayed) {:toc} ## Projects Here is a list of projects in which I participated. ### Sodatech Creation of [Sodata](https://objetsconnectes.wp.imt.fr/): a Big Data Plateform to collect and visualize data from social networks such as Facebook, Twitter &amp;...">
   
 
   
@@ -223,7 +223,10 @@
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <ul id="markdown-toc">
+      <h2 id="table-of-contents">Table of contents</h2>
+
+<ul id="markdown-toc">
+  <li><a href="#table-of-contents" id="markdown-toc-table-of-contents">Table of contents</a></li>
   <li><a href="#projects" id="markdown-toc-projects">Projects</a>    <ul>
       <li><a href="#sodatech" id="markdown-toc-sodatech">Sodatech</a></li>
       <li><a href="#curated-media" id="markdown-toc-curated-media">Curated Media</a></li>
