--- a/publications/index.html
+++ b/publications/index.html
@@ -87,7 +87,7 @@ My academic profiles
   
 
   
-  <meta property="og:image" content="http://mghassany.com/img/Ghassany Mohamad _2017_web.jpg" />
+  <meta property="og:image" content="http://mghassany.com/img/MG_web.jpg" />
   
   
 
@@ -124,7 +124,7 @@ My academic profiles
   
 
   
-  <meta name="twitter:image" content="http://mghassany.com/img/Ghassany Mohamad _2017_web.jpg" />
+  <meta name="twitter:image" content="http://mghassany.com/img/MG_web.jpg" />
   
 
 </head>
@@ -225,7 +225,7 @@ My academic profiles
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="http://mghassany.com ">
-	      <img class="avatar-img" src="/img/Ghassany Mohamad _2017_web.jpg" />
+	      <img class="avatar-img" src="/img/MG_web.jpg" />
 		</a>
 	  </div>
 	</div>
