--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   
 
   
-  <meta property="og:image" content="http://mghassany.com/img/Ghassany Mohamad _2017_web.jpg" />
+  <meta property="og:image" content="http://mghassany.com/img/MG_web.jpg" />
   
   
 
@@ -88,7 +88,7 @@
   
 
   
-  <meta name="twitter:image" content="http://mghassany.com/img/Ghassany Mohamad _2017_web.jpg" />
+  <meta name="twitter:image" content="http://mghassany.com/img/MG_web.jpg" />
   
 
 </head>
@@ -189,7 +189,7 @@
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="http://mghassany.com ">
-	      <img class="avatar-img" src="/img/Ghassany Mohamad _2017_web.jpg" />
+	      <img class="avatar-img" src="/img/MG_web.jpg" />
 		</a>
 	  </div>
 	</div>
