--- a/MLcourse/linear-regression.html
+++ b/MLcourse/linear-regression.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2018-01-09">
+<meta name="date" content="2018-01-11">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -255,7 +255,7 @@ Click <a href="https://egarpor.shinyapps.io/least-squares/" target="_blank">here
 <p><span class="math display">\[ \text{SE}(\hat{\beta_1})^2 =  \frac{\sigma^2}{\sum_{i=1}^{n} (x_i - \bar{x})^2} \]</span></p>
 <p><span class="math display">\[ \text{SE}(\hat{\beta_0})^2 = \sigma^2 \bigg[ \frac{1}{n} +  \frac{\bar{x}^2}{\sum_{i=1}^{n} (x_i - \bar{x})^2} \bigg] \]</span></p>
 <p>where <span class="math inline">\(\sigma^2 = Var(\epsilon)\)</span></p>
-<p>In general, <span class="math inline">\(\sigma^2\)</span> is know known, but can be estimated from the data. The estimate of <span class="math inline">\(\sigma\)</span> is known as the <em>residual standard error</em>, and is given by</p>
+<p>In general, <span class="math inline">\(\sigma^2\)</span> is unknown, but can be estimated from the data. The estimate of <span class="math inline">\(\sigma\)</span> is known as the <em>residual standard error</em>, and is given by</p>
 <p><span class="math display">\[ \text{RSE} = \sqrt{\frac{\text{RSS}}{(n-2)}} \]</span></p>
 <p>These standard errors can be used to compute <em>confidence intervals</em>. A <span class="math inline">\(95\%\)</span> confidence interval is defined as a range of values such that with <span class="math inline">\(95\%\)</span> probability, the range will contain the true unknown value of the parameter. It has the form</p>
 <p><span class="math display">\[ \hat{\beta_1} \pm 2 \cdot \text{SE}(\hat{\beta_1}) \]</span></p>
