--- a/MLcourse/linear-regression.html
+++ b/MLcourse/linear-regression.html
@@ -175,7 +175,7 @@
 <li>The size of the house is the input variable.</li>
 <li>The house price is the output variable.</li>
 <li>The input variables are typically denoted using the variable symbol <span class="math inline">\(X\)</span>,</li>
-<li>The inputs go by different names, such as <em>predictors</em>, <em>independent variables</em>, <em>features</em>, <em>predictor</em> or sometimes just <em>variables</em>.</li>
+<li>The inputs go by different names, such as <em>predictors</em>, <em>independent variables</em>, <em>features</em>, or sometimes just <em>variables</em>.</li>
 <li>The output variable is often called the <em>response</em>, <em>dependent variable</em> or <em>target</em>, and is typically denoted using the symbol <span class="math inline">\(Y\)</span>.</li>
 <li><span class="math inline">\((x_i,y_i)\)</span> is the <span class="math inline">\(i\)</span>th training example.</li>
 <li>The set of <span class="math inline">\(\{(x_i, y_i)\}\)</span> is the training set.</li>
@@ -309,7 +309,14 @@ Figure 1.1: Visualization of the ANOVA decomposition. SST measures the variation
 </div>
 <div class="rmdinsight">
 <p>
-Click <a href="https://egarpor.shinyapps.io/anova/" target="_blank">here</a> to see the ANOVA decomposition and its dependence on <span class="math inline"><em>σ</em><sup>2</sup></span> and <span class="math inline"><span class="math inline">\(\hat\sigma^2\)</span></span>.’
+Below the ANOVA decomposition and its dependence on <span class="math inline"><em>σ</em><sup>2</sup></span> and <span class="math inline"><span class="math inline">\(\hat\sigma^2\)</span></span>.’
+</p>
+</div>
+<div class="figure" style="text-align: center"><span id="fig:leastsquares"></span>
+<iframe src="https://ec2-35-177-34-200.eu-west-2.compute.amazonaws.com/least-squares/?showcase=0" width="90%" height="900px">
+</iframe>
+<p class="caption">
+Figure 1.2: (ref:leastsquarestitle)
 </p>
 </div>
 <p>The ANOVA table summarizes the decomposition of the variance. Here is given in the layout employed by <code>R</code>.</p>
