--- a/MLcourse/linear-regression.html
+++ b/MLcourse/linear-regression.html
@@ -309,11 +309,11 @@ Figure 1.1: Visualization of the ANOVA decomposition. SST measures the variation
 </div>
 <div class="rmdinsight">
 <p>
-Below the ANOVA decomposition and its dependence on <span class="math inline"><em>σ</em><sup>2</sup></span> and <span class="math inline"><span class="math inline">\(\hat\sigma^2\)</span></span>.’
+Below the ANOVA decomposition and its dependence on <span class="math inline"><em>σ</em><sup>2</sup></span> and <span class="math inline"><span class="math inline">\(\hat\sigma^2\)</span></span>.Application is also available <a href="https://ec2-35-177-34-200.eu-west-2.compute.amazonaws.com/anova/" target="_blank">here</a>.
 </p>
 </div>
 <div class="figure" style="text-align: center"><span id="fig:leastsquares"></span>
-<iframe src="https://ec2-35-177-34-200.eu-west-2.compute.amazonaws.com/least-squares/?showcase=0" width="90%" height="900px">
+<iframe src="https://ec2-35-177-34-200.eu-west-2.compute.amazonaws.com/anova/?showcase=0" width="90%" height="900px">
 </iframe>
 <p class="caption">
 Figure 1.2: (ref:leastsquarestitle)
