--- a/MLcourse/pw-1.html
+++ b/MLcourse/pw-1.html
@@ -294,7 +294,7 @@ A[<span class="dv">2</span>, <span class="dv">1</span>] <span class="co"># Eleme
 <span class="co">#ans&gt; [1] 2</span>
 A[<span class="dv">1</span>, ] <span class="co"># First row</span>
 <span class="co">#ans&gt; [1] 1 3</span>
-A[, <span class="dv">2</span>] <span class="co"># Seconds column</span>
+A[, <span class="dv">2</span>] <span class="co"># Second column</span>
 <span class="co">#ans&gt; [1] 3 4</span>
 
 <span class="co"># A data frame is a matrix with column names</span>
